[project]
name = "pylogx"
version = "1.0.0"
description="python logging extensions supporting additional levels, colorization and more"
authors = [
    { name="Claudio Klingler", email="ck@realtime-projects.com"}
]
readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/realtimeprojects/pylogx"
"Bug Tracker" = "https://github.com/realtimeprojects/pylogx/issues"
